--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     I'm a experienced in designing system architectures and solutions for rapid scaling. 
                     I have significant experience working in startups and fast moving teams with fixed deadlines.
                 </p>
+                <a href="Resume.zip" class="btn" download>Download CV</a>
            </div>
            
            <img src="img/dev-jane-02.jpg" alt="Jane leaning against a bus" class="about-me__img">
@@ -131,17 +132,17 @@
             <a href="mailto:kisakyehamiduh@gmail.com" class="footer__link">kisakyehamiduh@gmail.com</a>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a class="social-list__link" href="http://dribbble.com">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/kisakye-hamiduh-4620a4215/">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://twitter.com">
+                    <a class="social-list__link" href="https://twitter.com/pius_pro">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com">
+                    <a class="social-list__link" href="https://github.com/Hamiduh">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
